cambios en desa2

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>git - basico</title>
 </head>
 <body>
-   <h1>GIT - Basico</h1>  
+   <h1>GIT - Basico</h1>
+   <h1>DESARROLLO 2</h1>
 </body>
 </html>
